# noethers-turnstile

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/guide/: a-concrete-example.md  core-concepts.md  how-this-is-implemented.md  introduction.md  the-why.md
docs/papers/: admissibility_compilers_for_approximate_consequential_systems.md  admissible_compilability_representation_theorem.md
examples/gastown/: conftest.py  gastown_benchmark_spec.md  gastown_benchmark_spec_v7.md  gastown_benchmark_spec_v8.md  pyproject.toml  requirements.txt  run_component1.py
examples/gastown/acs/: __init__.py  compiler.py
examples/gastown/adapter/: __init__.py  authority_registry.py  otel_adapter.py  proof_context.py  provenance.py  real_trace_adapter.py  seance.py  token_registry.py
examples/gastown/corpus/component1/: results.json
examples/gastown/corpus/component2/: analysis_g1.md  preregistration.md  preregistration_convoy.md  prompts.json  results_g1.json
examples/gastown/corpus/generator/: filler.py  patterns.py  skeleton.py
examples/gastown/harness/: __init__.py  collector.py  evaluator.py  runner.py
examples/gastown/tests/: __init__.py  test_adapter.py  test_corpus.py  test_evaluator.py  test_harness.py  test_provenance.py
examples/pgm/: README.md  conftest.py  pyproject.toml
examples/pgm/bridge/: __init__.py  bif_parser.py  bridge.py  certifier.py  claims.py  fingerprints.py  tokens.py
examples/pgm/demo/: bif_loader.py  run_demo.py  tokens.py
examples/pgm/demo/inference/: __init__.py  candidates.py  certificates.py  envelope.py  memory.py  model.py
examples/pgm/demo/inference/compiler/: __init__.py  cert_policy.py  certificate_selector.py  frontier.py  registry.py
examples/pgm/demo/inference/kernels/: __init__.py  base.py  exact.py  hilbert.py
examples/pgm/results/: demo_diabetes_2026-05-17.txt  tests_2026-05-17.txt
examples/pgm/tests/: test_1_bridge.py  test_2_demo.py  test_3_stress.py  test_4_bif.py  test_5_gaps.py  test_6_demo.py
noethers-turnstile-core/: Cargo.toml
noethers-turnstile-core/benches/: bench_compile.rs
noethers-turnstile-core/src/: certifier.rs  compiler.rs  context.rs  gap.rs  lib.rs  permission.rs  token.rs
noethers-turnstile-py/: Cargo.toml
noethers-turnstile-py/src/: lib.rs
noethers-turnstile-tests/: Cargo.toml
noethers-turnstile-tests/proptest-regressions/: ac002_scope_algebra.txt  ec003d_anti_laundering.txt  ec003i_token_status_exhaustive.txt  ec003p_time_adversarial_runtime.txt  ec003q_fingerprint_sensitivity.txt  ec043_audit_not_authority.txt  proptest_provenance.txt
noethers-turnstile-tests/src/: ac002_scope_algebra.rs  audit_store.rs  ec003a_permission_order.rs  ec003b_composition_algebra.rs  ec003c_runtime_nonupgrade.rs  ec003d_anti_laundering.rs  ec003e_blocking_and_ooc.rs  ec003f_nary_composition.rs  ec003g_gap_status_algebra.rs  ec003h_compile_idempotence.rs  ec003i_token_status_exhaustive.rs  ec003j_multi_gap_multi_token.rs  ec003k_version_nonupgrade.rs  ec003l_ooc_all_variants.rs  ec003m_evidence_monotonicity.rs  ec003n_certifier_interface.rs  ec003o_negative_control_liveness.rs  ec003p_time_adversarial_runtime.rs  ec003q_fingerprint_sensitivity.rs  ec003r_large_n_composition.rs  ec003s_bounded_gap_semantics.rs  ec003t_scope_containment.rs  ec003u_provenance_field_absorption.rs  ec003v_gap_soundness.rs  ec003w_meet_and_diagnostic_separation.rs  ec003x_audit_not_authority.rs  ec003z_compose_n.rs  ec004_profile_wellformedness.rs  ec005_domain_admission.rs  ec006_profile_monotonicity_law.rs  ec007_derivation_chain_soundness.rs  ec008_concurrent_audit_store.rs  ec009_permission_from_str.rs  ec010_scope_candidate_admission.rs  ec011_gap_composition_invariants.rs  ec012_priority_tier_dominance.rs  ec013_composition_fail_closed.rs  ec014_schema_registry_invariants.rs  ec015_disallowed_use_accumulation.rs  ec016_compile_determinism.rs  (+44 more)
python/noethers_turnstile/: __init__.py  __init__.pyi
python/tests/: conftest.py  test_py001_permission.py  test_py002_compile_basic.py  test_py003_live_judgment.py  test_py004_compose.py  test_py005_timestamps.py  test_py006_exceptions.py  test_py007_types.py  test_py008_derivation.py
python/turnstile/: __init__.py
turnstile-core/: Cargo.toml
turnstile-core/benches/: bench_compile.rs
turnstile-core/src/: audit.rs  certifier.rs  compiler.rs  composition.rs  context.rs  error.rs  expiry.rs  gap.rs  lib.rs  permission.rs  registry.rs  token.rs
turnstile-py/: Cargo.toml
turnstile-py/src/: lib.rs
turnstile-tests/: Cargo.toml
turnstile-tests/proptest-regressions/: ec003b_composition_algebra.txt
turnstile-tests/src/: ac002_scope_algebra.rs  audit_store.rs  ec003a_permission_order.rs  ec003b_composition_algebra.rs  ec003c_runtime_nonupgrade.rs  ec003d_anti_laundering.rs  ec003e_blocking_and_ooc.rs  ec003f_nary_composition.rs  ec003g_gap_status_algebra.rs  ec003h_compile_idempotence.rs  ec003i_token_status_exhaustive.rs  ec003j_multi_gap_multi_token.rs  ec003k_version_nonupgrade.rs  ec003l_ooc_all_variants.rs  ec003m_evidence_monotonicity.rs  ec003n_certifier_interface.rs  ec003o_negative_control_liveness.rs  ec003p_time_adversarial_runtime.rs  ec003q_fingerprint_sensitivity.rs  ec003r_large_n_composition.rs  ec003s_bounded_gap_semantics.rs  ec003t_scope_containment.rs  ec003u_provenance_field_absorption.rs  ec003v_gap_soundness.rs  ec003w_meet_and_diagnostic_separation.rs  ec003x_audit_not_authority.rs  ec003z_compose_n.rs  ec004_profile_wellformedness.rs  ec005_domain_admission.rs  ec006_profile_monotonicity_law.rs  ec007_derivation_chain_soundness.rs  ec008_concurrent_audit_store.rs  ec009_permission_from_str.rs  ec010_scope_candidate_admission.rs  ec011_gap_composition_invariants.rs  ec012_priority_tier_dominance.rs  ec013_composition_fail_closed.rs  ec014_schema_registry_invariants.rs  ec015_disallowed_use_accumulation.rs  ec016_compile_determinism.rs  (+45 more)
