[workspace]
members = ["turnstile-core", "turnstile-py", "turnstile-tests"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "1"
proptest = "1"
hex = "0.4"
pyo3 = { version = "0.21", features = ["chrono"] }
tracing = "0.1"
