[package]
name = "noethers-turnstile-py"
version = "0.2.1"
edition = "2021"
publish = false
description = "Python bindings for noethers-turnstile-core via PyO3"
license = "Apache-2.0"
repository = "https://github.com/adis-zr/noethers-turnstile"
homepage = "https://github.com/adis-zr/noethers-turnstile"
keywords = ["admissibility", "permission", "formal-methods", "python", "pyo3"]
categories = ["api-bindings", "algorithms"]
documentation = "https://docs.rs/noethers-turnstile-py"

[lib]
name = "_noethers_turnstile"
crate-type = ["cdylib", "rlib"]

[dependencies]
noethers-turnstile-core = { path = "../noethers-turnstile-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }

[features]
extension-module = ["pyo3/extension-module"]
