[package]
name = "turnstile-core"
version = "0.1.0"
edition = "2021"
description = "Admissibility compiler core: Γ ⊢ z : p until ε"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
uuid = { version = "1", features = ["v4"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_compile"
harness = false
