[package]
name = "turnstile-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for turnstile-core via PyO3"
license = "Apache-2.0"
repository = "https://github.com/adis-zr/turnstile"
homepage = "https://github.com/adis-zr/turnstile"
keywords = ["admissibility", "permission", "formal-methods", "python", "pyo3"]
categories = ["api-bindings", "algorithms"]
documentation = "https://docs.rs/turnstile-py"

[lib]
name = "_turnstile"
crate-type = ["cdylib", "rlib"]

[dependencies]
turnstile-core = { path = "../turnstile-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }

[features]
extension-module = ["pyo3/extension-module"]
