[package]
name = "turnstile-tests"
version = "0.1.0"
edition = "2021"
description = "Property-based tests for turnstile-core"
license = "Apache-2.0"

[lib]
name = "turnstile_tests"
path = "src/lib.rs"

[[test]]
name = "proptest_composition"
path = "src/proptest_composition.rs"

[[test]]
name = "proptest_provenance"
path = "src/proptest_provenance.rs"

[[test]]
name = "proptest_expiry"
path = "src/proptest_expiry.rs"

[[test]]
name = "proptest_monotonicity"
path = "src/proptest_monotonicity.rs"

[[test]]
name = "ec003a_permission_order"
path = "src/ec003a_permission_order.rs"

[[test]]
name = "ec003b_composition_algebra"
path = "src/ec003b_composition_algebra.rs"

[[test]]
name = "ec003c_runtime_nonupgrade"
path = "src/ec003c_runtime_nonupgrade.rs"

[[test]]
name = "ec003d_anti_laundering"
path = "src/ec003d_anti_laundering.rs"

[[test]]
name = "ec003e_blocking_and_ooc"
path = "src/ec003e_blocking_and_ooc.rs"

[[test]]
name = "ec004_profile_wellformedness"
path = "src/ec004_profile_wellformedness.rs"

[[test]]
name = "ec005_domain_admission"
path = "src/ec005_domain_admission.rs"

[[test]]
name = "ac002_scope_algebra"
path = "src/ac002_scope_algebra.rs"

[[test]]
name = "audit_store"
path = "src/audit_store.rs"

[[test]]
name = "step11_assembler"
path = "src/step11_assembler.rs"

[[test]]
name = "ec003f_nary_composition"
path = "src/ec003f_nary_composition.rs"

[[test]]
name = "ec003g_gap_status_algebra"
path = "src/ec003g_gap_status_algebra.rs"

[[test]]
name = "ec003h_compile_idempotence"
path = "src/ec003h_compile_idempotence.rs"

[[test]]
name = "ec003i_token_status_exhaustive"
path = "src/ec003i_token_status_exhaustive.rs"

[[test]]
name = "ec003j_multi_gap_multi_token"
path = "src/ec003j_multi_gap_multi_token.rs"

[[test]]
name = "ec003k_version_nonupgrade"
path = "src/ec003k_version_nonupgrade.rs"

[[test]]
name = "ec003l_ooc_all_variants"
path = "src/ec003l_ooc_all_variants.rs"

[[test]]
name = "ec003m_evidence_monotonicity"
path = "src/ec003m_evidence_monotonicity.rs"

[[test]]
name = "ec003n_certifier_interface"
path = "src/ec003n_certifier_interface.rs"

[[test]]
name = "ec003o_negative_control_liveness"
path = "src/ec003o_negative_control_liveness.rs"

[[test]]
name = "ec003p_time_adversarial_runtime"
path = "src/ec003p_time_adversarial_runtime.rs"

[[test]]
name = "ec003q_fingerprint_sensitivity"
path = "src/ec003q_fingerprint_sensitivity.rs"

[[test]]
name = "ec003r_large_n_composition"
path = "src/ec003r_large_n_composition.rs"

[[test]]
name = "ec003s_bounded_gap_semantics"
path = "src/ec003s_bounded_gap_semantics.rs"

[[test]]
name = "ec003t_scope_containment"
path = "src/ec003t_scope_containment.rs"

[[test]]
name = "ec003u_provenance_field_absorption"
path = "src/ec003u_provenance_field_absorption.rs"

[[test]]
name = "proptest_derivation_audit"
path = "src/proptest_derivation_audit.rs"

[[test]]
name = "proptest_permission_ceiling"
path = "src/proptest_permission_ceiling.rs"

[[test]]
name = "proptest_ooc_projection"
path = "src/proptest_ooc_projection.rs"

[[test]]
name = "proptest_serde_roundtrip"
path = "src/proptest_serde_roundtrip.rs"

[[test]]
name = "proptest_meet_lattice"
path = "src/proptest_meet_lattice.rs"

[[test]]
name = "ec003v_gap_soundness"
path = "src/ec003v_gap_soundness.rs"

[[test]]
name = "ec003w_meet_and_diagnostic_separation"
path = "src/ec003w_meet_and_diagnostic_separation.rs"

[[test]]
name = "ec003x_audit_not_authority"
path = "src/ec003x_audit_not_authority.rs"

[[test]]
name = "ec003z_compose_n"
path = "src/ec003z_compose_n.rs"

[[test]]
name = "ec006_profile_monotonicity_law"
path = "src/ec006_profile_monotonicity_law.rs"

[[test]]
name = "ec007_derivation_chain_soundness"
path = "src/ec007_derivation_chain_soundness.rs"

[[test]]
name = "ec008_concurrent_audit_store"
path = "src/ec008_concurrent_audit_store.rs"

[[test]]
name = "ec009_permission_from_str"
path = "src/ec009_permission_from_str.rs"

[[test]]
name = "ec010_scope_candidate_admission"
path = "src/ec010_scope_candidate_admission.rs"

[[test]]
name = "ec011_gap_composition_invariants"
path = "src/ec011_gap_composition_invariants.rs"

[dependencies]
turnstile-core = { path = "../turnstile-core" }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
