[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "noethers-turnstile-example-gastown"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["noethers-turnstile"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adapter*", "acs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
