[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "turnstile-example-pgm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["turnstile"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
